fix(datepicker): inline-form alignment

--- a/src/components/datepicker/datePicker.scss
+++ b/src/components/datepicker/datePicker.scss
@@ -43,11 +43,11 @@ md-datepicker {
   }
 }
 
-.md-inline-form {
-  md-datepicker {
-    margin-top: 12px;
-  }
-}
+//.md-inline-form {
+//  md-datepicker {
+//    margin-top: 12px;
+//  }
+//}
 
 // The calendar icon button used to open the calendar pane.
 .md-datepicker-button {
